[package]
name = "deploynestworker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
chrono = "0.4.45"
anyhow = "1.0.102"
futures-util = "0.3.32"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
